<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_text_one">Crime #</string>
    <string name="crime_list_txt">Crime Title</string>
    <string name="crime_list_date">Crime Date</string>
    <string name="btn_call_police">Call police</string>
    <string name="full_date_time_format" translatable="false"> EEEE, dd MMMM yyyy, HH:mm </string>
    <string name="crime_solved_txt">Crime solved</string>
    <string name="button_go_to_begin">Go to begin</string>
    <string name="button_go_to_end">Go to end</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="full_time_format" translatable="false"> HH:mm </string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="empty_list">List is empty</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_requires_police">Requires Police</string>
    <string name="crime_report">%1$s!
The crime was discovered on %2$s. %3$s, and %4$s
</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <string name="crime_call_suspect">Call to suspect</string>
    <string name="crime_full_image">Full photo of crime</string>
    <string name="txt_label_date">Date of crime</string>
    <string name="txt_label_time">Time of crime</string>
    <string name="txt_label_call">Call to suspect</string>
</resources>
